tests/ui/type/issue-58355.stderr
error[E0746]: return type cannot have an unboxed trait object
  --> $DIR/issue-58355.rs:3:22
   |
LL | pub fn foo(callback: fn() -> dyn ToString) {
   |                      ^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
help: box the return type, and wrap all of the returned values in `Box::new`
   |
LL | pub fn foo(callback: Box<fn() -> dyn ToString>) {
   |                      ++++                    +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0746`.
